--- a/SemEval2020_Task5_Data.ipynb
+++ b/SemEval2020_Task5_Data.ipynb
@@ -48,7 +48,6 @@
         "import pandas as pd\n",
         "\n",
         "prefix = '/content/'\n",
-        "\n",
         "test_df = pd.read_csv(prefix + 'test.csv', header=None) # change to test.csv\n",
         "test_df=test_df.drop(index=0)\n",
         "\n",
@@ -56,7 +55,6 @@
         "    'id':test_df[0],\n",
         "    'text': test_df[1]\n",
         "})\n",
-        "\n",
         "# display \n",
         "test_df.head()"
       ],
@@ -137,7 +135,7 @@
         "import allennlp_models.structured_prediction\n",
         "predictor = Predictor.from_path(\"https://storage.googleapis.com/allennlp-public-models/biaffine-dependency-parser-ptb-2020.04.06.tar.gz\")\n",
         "\n",
-        "original = \"These distortions have seen one party or the other get shut out of general elections in recent years, including in contests they likely would have won if the parties had gotten to nominate a single candidate each.\"    \n",
+        "original = 'Oh, the military could have swooped in to save the day, they say, if only they had not been prevented from doing that by Col.'    \n",
         "prediction = predictor.predict(\n",
         "  sentence = original\n",
         ")\n",
@@ -376,29 +374,21 @@
         "    loops= list()\n",
         "    if len(condition)==0:\n",
         "      return deps, loops\n",
+        "    min=max=begin=end=-1 \n",
         "\n",
         "    begin = sentence.find(condition) # superspan for condition\n",
         "    if begin ==-1: \n",
         "      #print(condition,' not in:\\n'+sentence)\n",
         "      return deps, loops\n",
-        "    stop = begin + 1 + len(condition) \n",
-        "\n",
+        "    stop = begin + len(condition) + 1 # space\n",
+        "    \n",
         "    if len(complement) > 0:\n",
-        "      index = sentence.find(complement) # superspan for complement\n",
-        "      if index ==-1: \n",
+        "      min = sentence.find(complement) # superspan for complement\n",
+        "      if min ==-1: \n",
         "        #print(complement,' not in:\\n'+sentence)\n",
         "        return deps,loops\n",
-        "      if begin < index and index < stop: \n",
-        "        #print(complement,'<-->'+condition,' in:\\n'+sentence)\n",
-        "        loops.append(complement)\n",
-        "        deps.append(condition)   \n",
-        "      elif index == stop:  \n",
-        "        #print(complement,' + '+condition)\n",
-        "        stop = stop + 1 + len(complement)\n",
-        "        loops.append(complement)\n",
-        "      #elif index > stop:\n",
-        "      #  stop = index \n",
-        "      #  condition = sentence[begin:stop]\n",
+        "      max = min + len(complement) + 1 # space  \n",
+        "      #print(min,complement,max)\n",
         "\n",
         "    word = verb['word']\n",
         "    #print( word ,'-->', condition)\n",
@@ -412,18 +402,20 @@
         "      for span in sorted(subspans,key=position): # all subspans\n",
         "        start=span[0]['start']\n",
         "        end = span[0]['end']\n",
-        "        #print(start, sentence[start:end], begin, stop)\n",
-        "        if begin <= start and start <= stop: # span of the condition\n",
-        "          if start > 2: start=start - 1 # due to some unknown issue\n",
-        "          spantext = sentence[start:end].strip()\n",
-        "          #print(spantext, start, condition, end)\n",
-        "          if len(spantext) > 0:\n",
-        "            if spantext in condition:\n",
-        "              if spantext not in deps:\n",
-        "                deps.append(spantext)   \n",
-        "            if spantext in complement:\n",
-        "              if spantext not in loops: \n",
-        "                loops.append(spantext)  \n",
+        "        if start > 2: start=start - 1 \n",
+        "        #if end > 2: end = end - 1 # due to some unknown issue?!?\n",
+        "        spantext = sentence[start:end]\n",
+        "\n",
+        "        if len(spantext) > 0:\n",
+        "          if begin <= start and start < stop: # span of the condition\n",
+        "            if spantext in condition and spantext not in deps:\n",
+        "              #print(spantext, start, end, condition)\n",
+        "              deps.append(spantext)     \n",
+        "\n",
+        "            if min <= start and start < max: # span of the complement\n",
+        "              if spantext in complement and spantext not in loops: \n",
+        "                #print(spantext, start, end, complement)\n",
+        "                loops.append(spantext)\n",
         "\n",
         "    return deps, loops       "
       ],
@@ -533,7 +525,7 @@
         "      print(first,adeps,cdeps,aloops,cloops) # eg. 'set() set() set() set()'\n",
         "\n",
         "      if ralab == 1:      \n",
-        "        if not first and len(adeps) > 0 and len(cdeps) > 0:\n",
+        "        if not first or (len(adeps) > 0 and len(cdeps) > 0):\n",
         "          if len(aloops) > 0 or len(cloops) > 0:\n",
         "            if len(cloops)>0:\n",
         "              atext = atext + ' ' + ctext\n",
@@ -554,7 +546,7 @@
         "          return amid, alab, atext, astart, aend, '-100' # give up and fail\n",
         "\n",
         "        if alab == 1:  \n",
-        "          if not first and len(adeps) > 0 and len(cdeps) > 0:\n",
+        "          if not first or (len(adeps) > 0 and len(cdeps) > 0):\n",
         "            if len(aloops) > 0 or len(cloops) > 0:\n",
         "              if len(cloops)>0:\n",
         "                atext = atext + ' ' + ctext\n",
@@ -600,15 +592,15 @@
         "colab": {}
       },
       "source": [
-        "original = 'TOP TWEETS--@kurtbardella:\" if the first four weeks of the #Obama presidency were like this when I worked at #oversight we\\'d have issued so many subpoenas by now \"...'\n",
+        "original = 'Oh, the military could have swooped in to save the day, they say, if only they had not been prevented from doing that by Col.'\n",
         "\n",
         "prediction = predictor.predict(sentence = original)\n",
         "sentence, spans, deps, verbs = extract_dependents(prediction)\n",
         "\n",
         "verbs = follow_children(verbs) # flatten the tree\n",
         "#print(verbs)\n",
-        "antecedent = \"if the first four weeks of the #Obama presidency were like this when I worked at #oversight we\"\n",
-        "consequent = \"'d have issued so many subpoenas by now\"\n",
+        "antecedent = \"if only they had not been prevented from doing that by Col.\"\n",
+        "consequent = \"could have swooped in to save the day, they say,\"\n",
         "sentence = normalize(sentence)\n",
         "\n",
         "adeps, cdeps, aloops, cloops = track(verbs, antecedent, consequent, sentence)\n",
@@ -629,8 +621,6 @@
       "source": [
         "import pandas as pd\n",
         "\n",
-        "prefix = '/content/'\n",
-        "\n",
         "from tqdm import tqdm\n",
         "from time import sleep\n",
         "\n",
@@ -642,6 +632,7 @@
         "  original = test_df['text'][ind]\n",
         "  id = test_df['id'][ind]\n",
         "\n",
+        "  original = original.replace('\\\"','')\n",
         "  prediction = predictor.predict(original)\n",
         "\n",
         "  rebuilt, spans, deps, verbs = extract_dependents(prediction)\n",
@@ -659,7 +650,7 @@
         "\n",
         "  cid, clab, ctext, cstart, cend, cprob = analyze(id, c_df, rc_df, sentence, verbs, atext)\n",
         "  aid, alab, atext, astart, aend, aprob = analyze(id, a_df, ra_df, sentence, verbs, ctext)\n",
-        "  print('Antc',aprob)\n",
+        "  print(aprob,'A')\n",
         "\n",
         "  if aprob != '-100' and aprob != '-50' and aprob!='-25':\n",
         "    cid, clab, ctext, cstart, cend, cprob = analyze(id, c_df, rc_df, sentence, verbs, atext)\n",
@@ -668,16 +659,16 @@
         "    aid, alab, atext, astart, aend, aprob = analyze(id, a_df, ra_df, sentence, verbs, ctext, False)\n",
         "  if aprob == '-25':\n",
         "    cid,clab,ctext, cstart, cend, cprob = analyze(id, c_df, rc_df, sentence, verbs, atext, False)\n",
-        "  print('Cons',cprob)  \n",
+        "  print(cprob,'C')  \n",
         "\n",
         "  if cprob != 100 and cprob != 75 and cprob != 50 and cprob != 25:\n",
         "    aid, alab, atext, astart, aend, aprob = analyze(id, a_df, ra_df, sentence, verbs, ctext)\n",
-        "  print('Antc',aprob)  \n",
+        "  print(aprob,'A')  \n",
         "\n",
         "  consequent = ctext\n",
         "  antecedent = atext\n",
-        "  print(antecedent)\n",
-        "  print(consequent)\n",
+        "  #print(antecedent)\n",
+        "  #print(consequent)\n",
         "\n",
         "  cdep = '' # Pass\n",
         "  if consequent == antecedent:\n",
