--- a/SemEval2020_Task5_Subtask_2.ipynb
+++ b/SemEval2020_Task5_Subtask_2.ipynb
@@ -46,7 +46,7 @@
         "\n",
         "test_df = pd.DataFrame({\n",
         "    'id':test_df[0],\n",
-        "    'text': test_df[1], \n",
+        "    'text': test_df[1],\n",
         "    'labels': ''\n",
         "})\n",
         "\n",
@@ -823,38 +823,62 @@
         "\n",
         "        #print(new)\n",
         "        if len(new)==0: # md == pa\n",
-        "          new = breakup(md) \n",
-        "        if new == md:\n",
-        "          if md in modal:\n",
-        "            modal.remove(md)\n",
-        "            #print('remove:', md)\n",
-        "          continue  \n",
+        "          new = separate_mod(md) \n",
         "\n",
-        "        if len(new)>0 and not (\n",
-        "           new.lower().lstrip().startswith('if ') or\n",
-        "           new.lower().lstrip().startswith('wish ')\n",
-        "          ):\n",
-        "          if md in modal:\n",
-        "            modal.remove(md)\n",
-        "            #print('replace:',md,'[with]:',new)\n",
-        "          if new not in modal:\n",
-        "            modal.append(new)\n",
-        "            md = new  \n",
+        "        if len(new)>0:\n",
+        "          if new == md: # separate_mod(md): empty  \n",
+        "            if md in modal:\n",
+        "              modal.remove(md)\n",
+        "              #print('remove [C]:',md,'[b/c: A={C}]')\n",
+        "            continue  \n",
+        "\n",
+        "          if not (\n",
+        "            new.lower().lstrip().startswith('if ') or\n",
+        "            new.lower().lstrip().startswith('wish ')\n",
+        "            ):\n",
+        "            if md in modal:\n",
+        "              modal.remove(md)\n",
+        "              #print('replace [C]:',md,'[with]:',new)\n",
+        "            if new not in modal:\n",
+        "              modal.append(new)\n",
+        "              md = new  \n",
         "\n",
         "      if md in pa:\n",
         "        if pa.find(md)>0:\n",
         "          new = pa[0:pa.index(md)]\n",
         "        else:\n",
         "          new = pa.replace(md,'')    \n",
-        "               \n",
-        "        if new != pa and len(new)>0 and len(word_tokenize(new))>1 and not (\n",
-        "           new.lower().rstrip().endswith(' wish')\n",
-        "          ):\n",
-        "          if pa in past: \n",
+        "\n",
+        "        if len(new)==0: # md == pa\n",
+        "          if pa in past:\n",
         "            past.remove(pa)\n",
-        "          if new not in past:\n",
-        "            #print('replace:',pa,'[with]:',new)\n",
-        "            past.append(new)          "
+        "            #print('remove [A]:',pa,'[b/c:]',md)\n",
+        "\n",
+        "        if len(new)>0: # md is pa or part of pa\n",
+        "          if len(word_tokenize(new)) == 1 and md in modal:\n",
+        "            modal.remove(md)\n",
+        "            #print('remove [C]:',md,'[b/c:]',pa)\n",
+        "\n",
+        "          if len(word_tokenize(new)) == 1 and not (\n",
+        "            new.lower().lstrip().startswith('if ') or # is pa\n",
+        "            new.lower().lstrip().startswith('wish ')\n",
+        "          ):\n",
+        "            if pa in past:\n",
+        "              past.remove(pa)\n",
+        "            if pa not in modal: # pa is not md and md is not pa\n",
+        "              new = separate_mod(pa) # separate md part from pa\n",
+        "              modal.append(new)\n",
+        "              #print('replace [C]:',md,'[with:]',new)  \n",
+        "            continue\n",
+        "\n",
+        "          if new != pa and len(word_tokenize(new)) > 1 and not (\n",
+        "            new.lower().rstrip().endswith(' wish') # \"... you wish\"\n",
+        "            ):\n",
+        "            if pa in past: \n",
+        "              past.remove(pa)\n",
+        "            if new not in past:\n",
+        "              #print('replace [A]:',pa,'[with:]',new)\n",
+        "              past.append(new)          "
       ],
       "execution_count": null,
       "outputs": []
@@ -867,7 +891,7 @@
         "colab": {}
       },
       "source": [
-        "def breakup(md):\n",
+        "def separate_mod(md):\n",
         "  words = list()\n",
         "  if ', ' in md:\n",
         "    words = md.split(', ')  # eg. \"without action, \"  \n",
@@ -1032,7 +1056,7 @@
       },
       "source": [
         "modals, pasts, verbs, nouns, nounm, nounp = chunk(\n",
-        "  original = 'Well, Mr. Concentrated Portfolio, if you had held just those three positions, your total average return would be 180% -- nearly triple what David and Tom have achieved with their 60 positions..'\n",
+        "  original = 'I don\\'t think any of us---even economic gurus like Paul Krugman---really, truly understand just how bad it could\\'ve gotten \"on Main Street\" if the stimulus bill had become hamstrung by a filibuster threat or recalcitrant conservadems, the way so much of our legislation has since.'\n",
         ")\n",
         "#print(verbs)\n",
         "#print(nounm)\n",
@@ -1055,8 +1079,6 @@
         "import pandas as pd\n",
         "from tqdm import tqdm\n",
         "from time import sleep\n",
-        "\n",
-        "#print(test_df['id'].count())\n",
         "\n",
         "modal_df= pd.DataFrame(columns=['id','labels','text','start', 'end'])\n",
         "past_df = pd.DataFrame(columns=['id','labels','text','start', 'end'])\n",
