Paper released in COLING2020 Proceedings
Citation and code refactoring

--- a/SemEval2020_Task5_Data.ipynb
+++ b/SemEval2020_Task5_Data.ipynb
@@ -402,8 +402,8 @@
         "      for span in sorted(subspans,key=position): # all subspans\n",
         "        start=span[0]['start']\n",
         "        end = span[0]['end']\n",
-        "        if start > 2: start=start - 1 \n",
-        "        #if end > 2: end = end - 1 # due to some unknown issue?!?\n",
+        "        if start > 2: start=start - 2 \n",
+        "        if end > 2: end = end - 2 # due to some unknown issue?!?\n",
         "        spantext = sentence[start:end]\n",
         "\n",
         "        if len(spantext) > 0:\n",
@@ -440,10 +440,10 @@
         "    return adeps, cdeps, aloops, cloops\n",
         "\n",
         "  for verb in verbs: # any 'VERB' or \"AUX\" or \"NOUN\", because those are typicaly at root\n",
-        "    deps, loops = explore(verb, antecedent, consequent, sentence, 'dep nsubj','cc advcl')\n",
+        "    deps, loops = explore(verb, antecedent, consequent, sentence, 'dep nsubj conj ccomp','cc advcl')\n",
         "    adeps.update(deps)\n",
         "    aloops.update(loops)\n",
-        "    deps, loops = explore(verb, consequent, antecedent, sentence, 'dep prep advmod aux','cop xcomp')\n",
+        "    deps, loops = explore(verb, consequent, antecedent, sentence, 'dep prep advmod aux conj ccomp','cop xcomp')\n",
         "    cdeps.update(deps)\n",
         "    cloops.update(loops)\n",
         "    if len(adeps) > 0 and len(cdeps) > 0:\n",
@@ -592,15 +592,14 @@
         "colab": {}
       },
       "source": [
-        "original = 'Oh, the military could have swooped in to save the day, they say, if only they had not been prevented from doing that by Col.'\n",
-        "\n",
+        "original = '\"Honestly, if the Democrats would have won the election, first of all, you would have had a lot different - if you look at the last four decisions in the Supreme Court at 5-4, they would have all been reversed,\" he said.'\n",
         "prediction = predictor.predict(sentence = original)\n",
         "sentence, spans, deps, verbs = extract_dependents(prediction)\n",
         "\n",
         "verbs = follow_children(verbs) # flatten the tree\n",
         "#print(verbs)\n",
-        "antecedent = \"if only they had not been prevented from doing that by Col.\"\n",
-        "consequent = \"could have swooped in to save the day, they say,\"\n",
+        "antecedent = \"if the Democrats would have won the election\"\n",
+        "consequent = \"would have\"\n",
         "sentence = normalize(sentence)\n",
         "\n",
         "adeps, cdeps, aloops, cloops = track(verbs, antecedent, consequent, sentence)\n",
