--- a/SemEval2020_Task5_Subtask_2.ipynb
+++ b/SemEval2020_Task5_Subtask_2.ipynb
@@ -201,6 +201,14 @@
         "                if 'wish' in word.lower() or 'shoul' in word.lower(): # in vs == !!!\n",
         "                  #if word not in head:\n",
         "                  #  head = scrap_from(obj,item)\n",
+        "                  if head in word:\n",
+        "                    prefix = separate_left(word, head)\n",
+        "                    if prefix not in '  ' and prefix.lower() in 'if i wish we wish they wish i do n\\'t think I don\\'t think this , these , those , which , what , whom , who\\'s , and , why ':\n",
+        "                      #print('prefix:',prefix,'[in]',word)\n",
+        "                      head = word\n",
+        "                    suffix = separate_right(word, head)\n",
+        "                    #if suffix not in '  ':\n",
+        "                    #  print('suffix:',prefix,'[in]',word)\n",
         "                  parts.append({'tag':'VP','word':head,'text':obj})\n",
         "                  includes.append(word)\n",
         "\n",
@@ -556,39 +564,46 @@
         "  candid = []\n",
         "  defrag = []\n",
         "  prev = str() # previous fragment\n",
-        "  start = 0 # start of next fragment\n",
-        "  end = -1 # end of previous fragment  \n",
+        "  end = 0 # end of previous fragment  \n",
         "  for f in sorted(fragments,key=len):\n",
+        "    start= 0 # start of next fragment\n",
         "    r = normalize(f)\n",
         "    #print(prev+' | '+r)\n",
         "    try: \n",
         "      start = text.index(r)\n",
         "    except ValueError:\n",
         "      #print('\\n{'+r+'} not in:\\n '+text) # this is now in offset()\n",
+        "      #continue\n",
         "      pass\n",
         "    if start > end: # assume no overlap with prev (ie separte fragment)\n",
-        "      defrag = prev + r # try to join two fragments\n",
+        "      defrag = prev \n",
+        "      if len(defrag) > 0:\n",
+        "        defrag = defrag + ' '\n",
+        "      defrag = defrag + r       # try to join two fragments\n",
         "      index = text.find(defrag) # is it exactly consequitive fragment?\n",
-        "      if index < 0 or index > end: # it separate and non-consequitive \n",
-        "        end = start + len(r) - 1\n",
+        "      if index < 0:             # it non-consequitive \n",
+        "        end = start + len(r)\n",
         "        prev = r\n",
         "        if end < len(text):\n",
         "          candid.append(overlay(start, {'labels':0, 'text':r, 'start':start, 'end':end}, original, removed))\n",
+        "          #print('\\n{'+defrag+'} is not valid',start, end)\n",
+        "        #else:\n",
+        "          #print('\\n{'+defrag+'} is too long',start, end)  \n",
         "      elif index > 0 and index+len(prev)+len(r) < len(text): # consequitive\n",
         "        start = index \n",
-        "        end = start+len(prev)+len(r)-1\n",
+        "        end = start+len(prev)+len(r)\n",
         "        prev = text[start:end]\n",
         "        candid.append(overlay(start, {'labels':0, 'text':defrag, 'start':start, 'end':end}, original, removed))\n",
-        "    elif start < end: # next fragment is located before prev end\n",
+        "    elif start <= end: # next fragment is located before prev end\n",
         "      defrag = r + prev\n",
         "      index = text.find(defrag) # is it exactly preceding prev fragment?\n",
         "      #print(text,index,defrag)\n",
-        "      if index > 0 and index+len(prev)+len(r)-1 == end:\n",
+        "      if index > 0 and index+len(prev)+len(r) == end:\n",
         "        start = index\n",
         "        prev = text[start:end]\n",
         "        candid.append(overlay(start, {'labels':0, 'text':defrag, 'start':start, 'end':end}, original, removed))\n",
         "      elif start >= 0:\n",
-        "        end = start + len(r) - 1\n",
+        "        end = start + len(r)\n",
         "        prev = r\n",
         "        if end < len(text):\n",
         "          candid.append(overlay(start, {'labels':0, 'text':r, 'start':start, 'end':end}, original, removed))\n",
@@ -648,15 +663,17 @@
       },
       "source": [
         "def offset(text, starting, original):\n",
-        "  start = -1\n",
-        "  end = -1\n",
+        "  #print(starting, text)\n",
+        "  start=0\n",
+        "  end = 0\n",
         "  prev = str()\n",
         "  for c in text:\n",
         "    try: \n",
-        "      #print(c, start, prev, end)\n",
         "      start = original.index(prev + c, starting)\n",
         "      end = start + len(prev) + len(c) - 1\n",
+        "      #print(c, start, prev, end)\n",
         "    except ValueError:\n",
+        "      #print(c, start, prev, end)\n",
         "      if c==' ': # eg.'Pfizer (NYSE: '+'PFE)'\n",
         "        last = original.find(prev, starting)\n",
         "        if last > -1: # back 1 space helped\n",
@@ -664,26 +681,26 @@
         "          continue    # skip 1 space\n",
         "        else:   \n",
         "          if end >= 0: # reverse from end\n",
-        "            end = end + 1 # 1 space\n",
-        "            start = end - len(prev)\n",
-        "            text = original[start:end]\n",
+        "            start = end - len(prev) + 1\n",
+        "            text = original[start:end+1]\n",
         "            #print(start, prev, end, text)\n",
         "          else:\n",
         "            print('\\n\\\"'+prev+'\\\" not from '+str(starting) + ' in:'+original)\n",
         "          return text, start, end  \n",
         "      else: \n",
-        "        last = original.find(prev + ' ' + c, starting)\n",
-        "        if last > -1: # add 1 space \n",
-        "          prev = prev + ' ' + c\n",
+        "        last = original.find(prev+' '+c, starting)\n",
+        "        if last > -1:                  # text==\"had I had advice... 20+ years ago\"\n",
+        "          prev = prev + ' ' + c        # prev==\"had I \"\n",
         "          continue\n",
-        "        else:  \n",
-        "          last = original.find(prev+c)\n",
-        "          if last == -1: # eg 'bla-' instead of 'bla -'\n",
-        "            last = original.find(prev) # leave 'bla'\n",
-        "          if last > -1: # without space!\n",
-        "            start = last\n",
-        "            end = start + len (prev) + len(c) \n",
-        "            prev = prev + c\n",
+        "        else:                          \n",
+        "          last = original.find(prev+c) # with space\n",
+        "          if last == -1:       \n",
+        "            last = original.find(prev) # w/o space\n",
+        "          if last > 0:                \n",
+        "            start = last-1\n",
+        "            end = start+len(prev)+len(c) \n",
+        "            prev = prev+c\n",
+        "            #print(c,start,prev,end,text)\n",
         "            continue\n",
         "          if start >= 0: # reverse from start\n",
         "            end = start + len(prev) + len(c)\n",
@@ -937,14 +954,14 @@
         "        if prefix.lower() in 'is, was, ; : ':  \n",
         "          past.remove(pal)\n",
         "          #print('remove:', pal)\n",
-        "        elif prefix.lower() in 'if ':  \n",
+        "        elif prefix.lower() in 'if wish ':  \n",
         "          past.remove(pas)\n",
         "          #print('remove:', pas)\n",
         "\n",
         "      suffix=separate_right(pal,pas)  # suffix = pal - prefix - pas \n",
         "      if len(suffix)>0 and suffix!=prefix and pal in past: \n",
         "        #print('suffix:', suffix)\n",
-        "        if suffix in ', once , I , you , we , she , he , they , that , this , these , those , which , what , whom , who\\'s , and , as soon as ;':\n",
+        "        if suffix.lower() in ', once , i , you , we , she , he , they , that , this , these , those , which , what , whom , who\\'s , and , why ':\n",
         "          past.remove(pal)\n",
         "          new = pal[0:pal.rfind(suffix)] # trim suffix  \n",
         "          #print('replace:',pal,'[with]:',new)\n",
@@ -1056,7 +1073,7 @@
       },
       "source": [
         "modals, pasts, verbs, nouns, nounm, nounp = chunk(\n",
-        "  original = 'I don\\'t think any of us---even economic gurus like Paul Krugman---really, truly understand just how bad it could\\'ve gotten \"on Main Street\" if the stimulus bill had become hamstrung by a filibuster threat or recalcitrant conservadems, the way so much of our legislation has since.'\n",
+        "  original = 'But the way Mr. O\\'Connor assessed it, if he had won over Ms. Halliday, who said her views on gun control stemmed from her desire to protect her two daughters, then she may well talk to her friends and post something on Facebook - and, if he is fortunate, he will have 10 new votes instead of one..'\n",
         ")\n",
         "#print(verbs)\n",
         "#print(nounm)\n",
