First day of COLING2020
Update code and citatioin

--- a/SemEval2020_Task5_Data.ipynb
+++ b/SemEval2020_Task5_Data.ipynb
@@ -16,9 +16,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lMnqA1JbeTGQ",
-        "colab_type": "code",
-        "colab": {}
+        "id": "lMnqA1JbeTGQ"
       },
       "source": [
         "from google.colab import drive\n",
@@ -40,9 +38,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RsHDDbRWsPd-",
-        "colab_type": "code",
-        "colab": {}
+        "id": "RsHDDbRWsPd-"
       },
       "source": [
         "import pandas as pd\n",
@@ -64,9 +60,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dbBm343LWeyp",
-        "colab_type": "code",
-        "colab": {}
+        "id": "dbBm343LWeyp"
       },
       "source": [
         "import pandas as pd\n",
@@ -113,9 +107,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PO8X5DmJxNUU",
-        "colab_type": "code",
-        "colab": {}
+        "id": "PO8X5DmJxNUU"
       },
       "source": [
         "pip install allennlp==1.0.0 allennlp-models==1.0.0"
@@ -126,9 +118,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MAzLpie_9b9w",
-        "colab_type": "code",
-        "colab": {}
+        "id": "MAzLpie_9b9w"
       },
       "source": [
         "from allennlp.predictors.predictor import Predictor\n",
@@ -147,9 +137,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ze1FUy-yukEa",
-        "colab_type": "code",
-        "colab": {}
+        "id": "ze1FUy-yukEa"
       },
       "source": [
         "def extract_dependents(prediction):\n",
@@ -173,9 +161,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3Rrhac-EvZsE",
-        "colab_type": "code",
-        "colab": {}
+        "id": "3Rrhac-EvZsE"
       },
       "source": [
         "def extract_children(obj, include='', exclude=''):\n",
@@ -245,9 +231,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_J6ueg9eJ4RB",
-        "colab_type": "code",
-        "colab": {}
+        "id": "_J6ueg9eJ4RB"
       },
       "source": [
         "def position(span):\n",
@@ -259,9 +243,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ep8OBDtqgyE4",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Ep8OBDtqgyE4"
       },
       "source": [
         "def follow_children(obj):\n",
@@ -294,9 +276,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "c45HuHKFl-Ax",
-        "colab_type": "code",
-        "colab": {}
+        "id": "c45HuHKFl-Ax"
       },
       "source": [
         "import re\n",
@@ -312,9 +292,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4CoPtjXKBtrj",
-        "colab_type": "code",
-        "colab": {}
+        "id": "4CoPtjXKBtrj"
       },
       "source": [
         "def normalize(fragment):\n",
@@ -364,12 +342,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KAy762nn4sJX",
-        "colab_type": "code",
-        "colab": {}
+        "id": "KAy762nn4sJX"
       },
       "source": [
-        "def explore(verb, condition, complement, sentence, include='',exclude=''):\n",
+        "def explore(verb, condition, complement, sentence, include='',exclude='', astart=-1, aned=-1, cstart=-1, cend=-1):\n",
         "    deps = list()\n",
         "    loops= list()\n",
         "    if len(condition)==0:\n",
@@ -425,12 +401,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2Bmabbq-MUbB",
-        "colab_type": "code",
-        "colab": {}
+        "id": "2Bmabbq-MUbB"
       },
       "source": [
-        "def track(verbs, antecedent, consequent, sentence):\n",
+        "def track(verbs, antecedent, consequent, sentence, astart, aned, cstart, cend):\n",
         "  adeps = set()\n",
         "  aloops= set()\n",
         "  cdeps = set()\n",
@@ -440,13 +414,13 @@
         "    return adeps, cdeps, aloops, cloops\n",
         "\n",
         "  for verb in verbs: # any 'VERB' or \"AUX\" or \"NOUN\", because those are typicaly at root\n",
-        "    deps, loops = explore(verb, antecedent, consequent, sentence, 'dep nsubj conj ccomp','cc advcl')\n",
+        "    deps, loops = explore(verb, antecedent, consequent, sentence, 'dep nsubj conj ccomp','cc advcl',astart, aned, cstart, cend)\n",
         "    adeps.update(deps)\n",
         "    aloops.update(loops)\n",
-        "    deps, loops = explore(verb, consequent, antecedent, sentence, 'dep prep advmod aux conj ccomp','cop xcomp')\n",
+        "    deps, loops = explore(verb, consequent, antecedent, sentence, 'dep prep advmod conj advcl','cop xcomp',cstart,cend,astart,aend)\n",
         "    cdeps.update(deps)\n",
         "    cloops.update(loops)\n",
-        "    if len(adeps) > 0 and len(cdeps) > 0:\n",
+        "    if len(adeps) > 0 or len(cdeps) > 0:\n",
         "      return adeps, cdeps, aloops, cloops    \n",
         "    adeps = set()\n",
         "    cdeps = set()  \n",
@@ -459,9 +433,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UBfvzUf-StyO",
-        "colab_type": "code",
-        "colab": {}
+        "id": "UBfvzUf-StyO"
       },
       "source": [
         "def separate_from(md, pa):\n",
@@ -482,12 +454,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vDSx2bPhYBFK",
-        "colab_type": "code",
-        "colab": {}
+        "id": "vDSx2bPhYBFK"
       },
       "source": [
-        "def analyze(id, df, r_df, sentence, verbs=[], ctext='', first=True):\n",
+        "def analyze(id, df, r_df, sentence, verbs=[], ctext='', cstart=-1, cend=-1, first=True):\n",
         "  atext = str()\n",
         "  astart=-1\n",
         "  aend = -1\n",
@@ -519,9 +489,9 @@
         "      \n",
         "      print('|', alab, atext)\n",
         "      if first:\n",
-        "        adeps,cdeps,aloops,cloops = track(verbs, atext, ctext, sentence)\n",
+        "        adeps,cdeps,aloops,cloops = track(verbs, atext, ctext, sentence, astart, aend, cstart, cend)\n",
         "      else: \n",
-        "        adeps,cdeps,aloops,cloops = track(verbs, ctext, atext, sentence)\n",
+        "        adeps,cdeps,aloops,cloops = track(verbs, ctext, atext, sentence, cstart, cend, astart, aend)\n",
         "      print(first,adeps,cdeps,aloops,cloops) # eg. 'set() set() set() set()'\n",
         "\n",
         "      if ralab == 1:      \n",
@@ -587,22 +557,25 @@
       "cell_type": "code",
       "metadata": {
         "id": "RCRAUxWcq7Gp",
-        "colab_type": "code",
-        "cellView": "both",
-        "colab": {}
+        "cellView": "both"
       },
       "source": [
-        "original = '\"Honestly, if the Democrats would have won the election, first of all, you would have had a lot different - if you look at the last four decisions in the Supreme Court at 5-4, they would have all been reversed,\" he said.'\n",
+        "original = 'If that was my daughter, I would have asked If I did something wrong.'\n",
+        "\n",
         "prediction = predictor.predict(sentence = original)\n",
         "sentence, spans, deps, verbs = extract_dependents(prediction)\n",
         "\n",
         "verbs = follow_children(verbs) # flatten the tree\n",
         "#print(verbs)\n",
-        "antecedent = \"if the Democrats would have won the election\"\n",
-        "consequent = \"would have\"\n",
+        "antecedent = 'If that was my daughter'\n",
+        "astart=0\n",
+        "aend = 22\n",
+        "consequent = 'would have asked'\n",
+        "cstart=27\n",
+        "cend = 42\n",
         "sentence = normalize(sentence)\n",
         "\n",
-        "adeps, cdeps, aloops, cloops = track(verbs, antecedent, consequent, sentence)\n",
+        "adeps, cdeps, aloops, cloops = track(verbs, antecedent, consequent, sentence, astart, aend, cstart, cend)\n",
         "print(adeps,cdeps)\n",
         "print(aloops,cloops)"
       ],
@@ -612,10 +585,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab_type": "code",
         "id": "QUPpOr6t6udV",
-        "cellView": "both",
-        "colab": {}
+        "cellView": "both"
       },
       "source": [
         "import pandas as pd\n",
@@ -648,20 +619,20 @@
         "  ctext=str()\n",
         "\n",
         "  cid, clab, ctext, cstart, cend, cprob = analyze(id, c_df, rc_df, sentence, verbs, atext)\n",
-        "  aid, alab, atext, astart, aend, aprob = analyze(id, a_df, ra_df, sentence, verbs, ctext)\n",
+        "  aid, alab, atext, astart, aend, aprob = analyze(id, a_df, ra_df, sentence, verbs, ctext, cstart, cend)\n",
         "  print(aprob,'A')\n",
         "\n",
         "  if aprob != '-100' and aprob != '-50' and aprob!='-25':\n",
-        "    cid, clab, ctext, cstart, cend, cprob = analyze(id, c_df, rc_df, sentence, verbs, atext)\n",
+        "    cid, clab, ctext, cstart, cend, cprob = analyze(id, c_df, rc_df, sentence, verbs, atext,astart,aend)\n",
         "  if aprob == '-50':\n",
         "    ctext = atext\n",
-        "    aid, alab, atext, astart, aend, aprob = analyze(id, a_df, ra_df, sentence, verbs, ctext, False)\n",
+        "    aid, alab, atext, astart, aend, aprob = analyze(id, a_df, ra_df, sentence, verbs, ctext, cstart, cend, False)\n",
         "  if aprob == '-25':\n",
-        "    cid,clab,ctext, cstart, cend, cprob = analyze(id, c_df, rc_df, sentence, verbs, atext, False)\n",
+        "    cid, clab, ctext, cstart, cend, cprob = analyze(id, c_df, rc_df, sentence, verbs, atext, astart, aend, False)\n",
         "  print(cprob,'C')  \n",
         "\n",
         "  if cprob != 100 and cprob != 75 and cprob != 50 and cprob != 25:\n",
-        "    aid, alab, atext, astart, aend, aprob = analyze(id, a_df, ra_df, sentence, verbs, ctext)\n",
+        "    aid, alab, atext, astart, aend, aprob = analyze(id, a_df, ra_df, sentence, verbs, ctext, cstart, cend)\n",
         "  print(aprob,'A')  \n",
         "\n",
         "  consequent = ctext\n",
@@ -745,9 +716,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ib77s9dReMcD",
-        "colab_type": "code",
-        "colab": {}
+        "id": "ib77s9dReMcD"
       },
       "source": [
         "!zip submission_task2.zip subtask2.csv\n",
