--- a/SemEval2020_Task5_Subtask_2.ipynb
+++ b/SemEval2020_Task5_Subtask_2.ipynb
@@ -16,9 +16,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jlTujgsUAGFA",
-        "colab_type": "code",
-        "colab": {}
+        "id": "jlTujgsUAGFA"
       },
       "source": [
         "from google.colab import drive\n",
@@ -33,9 +31,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yB4EnsYmpn5-",
-        "colab_type": "code",
-        "colab": {}
+        "id": "yB4EnsYmpn5-"
       },
       "source": [
         "import pandas as pd\n",
@@ -59,9 +55,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "c4DctzKMLVOx",
-        "colab_type": "code",
-        "colab": {}
+        "id": "c4DctzKMLVOx"
       },
       "source": [
         "!pip install allennlp==1.0.0 allennlp-models==1.0.0\n",
@@ -78,9 +72,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4IkB2ctejwTR",
-        "colab_type": "code",
-        "colab": {}
+        "id": "4IkB2ctejwTR"
       },
       "source": [
         "from allennlp.predictors.predictor import Predictor\n",
@@ -93,9 +85,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8CZ-J9aocvFD",
-        "colab_type": "code",
-        "colab": {}
+        "id": "8CZ-J9aocvFD"
       },
       "source": [
         "prediction = predictor.predict(\n",
@@ -109,8 +99,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "vIJgOTAePV-e",
-        "colab_type": "text"
+        "id": "vIJgOTAePV-e"
       },
       "source": [
         "START AGAIN"
@@ -119,9 +108,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "u7r33OAFtOM9",
-        "colab_type": "code",
-        "colab": {}
+        "id": "u7r33OAFtOM9"
       },
       "source": [
         "def extract_modal(obj):\n",
@@ -284,9 +271,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PDJ7trrg3yzq",
-        "colab_type": "code",
-        "colab": {}
+        "id": "PDJ7trrg3yzq"
       },
       "source": [
         "def combine(parts,anteced,conseqs):\n",
@@ -333,9 +318,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4MeCoOLXx8IU",
-        "colab_type": "code",
-        "colab": {}
+        "id": "4MeCoOLXx8IU"
       },
       "source": [
         "def scrap_from(obj, item=None): \n",
@@ -371,9 +354,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Gm_UQ7ejvUsN",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Gm_UQ7ejvUsN"
       },
       "source": [
         "def separate_children(obj):\n",
@@ -405,9 +386,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab_type": "code",
-        "id": "8XYFHp-5KyQ7",
-        "colab": {}
+        "id": "8XYFHp-5KyQ7"
       },
       "source": [
         "def extract_constituents(prediction):\n",
@@ -425,9 +404,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pURMbvkG2iTY",
-        "colab_type": "code",
-        "colab": {}
+        "id": "pURMbvkG2iTY"
       },
       "source": [
         "from nltk.tokenize import word_tokenize\n",
@@ -485,9 +462,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "c45HuHKFl-Ax",
-        "colab_type": "code",
-        "colab": {}
+        "id": "c45HuHKFl-Ax"
       },
       "source": [
         "import re\n",
@@ -503,9 +478,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4CoPtjXKBtrj",
-        "colab_type": "code",
-        "colab": {}
+        "id": "4CoPtjXKBtrj"
       },
       "source": [
         "def normalize(fragment):\n",
@@ -554,9 +527,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aUKIAsKb9Cwf",
-        "colab_type": "code",
-        "colab": {}
+        "id": "aUKIAsKb9Cwf"
       },
       "source": [
         "def defragment(fragments, text, original, removed):\n",
@@ -621,9 +592,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pDbpK2N_Md_0",
-        "colab_type": "code",
-        "colab": {}
+        "id": "pDbpK2N_Md_0"
       },
       "source": [
         "def overlay(starting, fragment, original, removed):\n",
@@ -657,9 +626,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tt4ghi_XxGa-",
-        "colab_type": "code",
-        "colab": {}
+        "id": "tt4ghi_XxGa-"
       },
       "source": [
         "def offset(text, starting, original):\n",
@@ -721,9 +688,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "msFC5TstNCsu",
-        "colab_type": "code",
-        "colab": {}
+        "id": "msFC5TstNCsu"
       },
       "source": [
         "def record(original):\n",
@@ -736,9 +701,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "I-pu1f8IN7VA",
-        "colab_type": "code",
-        "colab": {}
+        "id": "I-pu1f8IN7VA"
       },
       "source": [
         "def contract(text, base):\n",
@@ -756,9 +719,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fT0KNkJn_Tuj",
-        "colab_type": "code",
-        "colab": {}
+        "id": "fT0KNkJn_Tuj"
       },
       "source": [
         "def separate_from(md, pa):\n",
@@ -779,9 +740,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ravlAydJ3fsR",
-        "colab_type": "code",
-        "colab": {}
+        "id": "ravlAydJ3fsR"
       },
       "source": [
         "def separate_right(md, pa): \n",
@@ -800,9 +759,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bWcRlR-p34-q",
-        "colab_type": "code",
-        "colab": {}
+        "id": "bWcRlR-p34-q"
       },
       "source": [
         "def separate_left(md, pa):\n",
@@ -822,9 +779,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZeVisyM8bjig",
-        "colab_type": "code",
-        "colab": {}
+        "id": "ZeVisyM8bjig"
       },
       "source": [
         "def separate(modal,past):\n",
@@ -903,9 +858,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YLeXY93GvrOV",
-        "colab_type": "code",
-        "colab": {}
+        "id": "YLeXY93GvrOV"
       },
       "source": [
         "def separate_mod(md):\n",
@@ -936,9 +889,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pRDL4wXADzK8",
-        "colab_type": "code",
-        "colab": {}
+        "id": "pRDL4wXADzK8"
       },
       "source": [
         "def deoverlap(past):\n",
@@ -973,9 +924,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4nietMZM3C-7",
-        "colab_type": "code",
-        "colab": {}
+        "id": "4nietMZM3C-7"
       },
       "source": [
         "def chunk(original):\n",
@@ -1067,13 +1016,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "quzZs7aWz7-l",
-        "colab_type": "code",
-        "colab": {}
+        "id": "quzZs7aWz7-l"
       },
       "source": [
         "modals, pasts, verbs, nouns, nounm, nounp = chunk(\n",
-        "  original = 'But the way Mr. O\\'Connor assessed it, if he had won over Ms. Halliday, who said her views on gun control stemmed from her desire to protect her two daughters, then she may well talk to her friends and post something on Facebook - and, if he is fortunate, he will have 10 new votes instead of one..'\n",
+        "  original = 'Mr. Rosenstein, whose office received briefings every other week on the progress of the investigation, would have glimpsed the gravity of the situation with the special counsel interviewing witnesses.'\n",
         ")\n",
         "#print(verbs)\n",
         "#print(nounm)\n",
@@ -1088,9 +1035,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "XRv9sHtMZQSE",
-        "colab_type": "code",
-        "cellView": "both",
-        "colab": {}
+        "cellView": "both"
       },
       "source": [
         "import pandas as pd\n",
@@ -1140,9 +1085,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bAQE-GxfQ4Ev",
-        "colab_type": "code",
-        "colab": {}
+        "id": "bAQE-GxfQ4Ev"
       },
       "source": [
         "past_df.to_csv(prefix+'antecedents.tsv', sep='\\t', index=False, header=False)\n",
@@ -1154,9 +1097,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "u3w26wdnuriO",
-        "colab_type": "code",
-        "colab": {}
+        "id": "u3w26wdnuriO"
       },
       "source": [
         "!mv /content/antecedents.tsv /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/\n",
